# mephi_par_prog

./: .gitignore  Cargo.toml
cuda/cpu/: Cargo.toml  build.rs
cuda/cpu/src/: main.rs
cuda/gpu/: Cargo.toml
cuda/gpu/src/: lib.rs
src/: lib.rs
