[package]
name = "mephi_par_prog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav = "1.0.0"
anyhow = "1.0.65"
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
create_process_w = { version = "0.1.2", package = "CreateProcessW" }