[package]
name = "mephi_par_prog"
version = "0.1.0"
edition = "2021"

[dependencies]
wav = "1.0.0"
anyhow = "1.0.65"
libc = "0.2.135"
nix = "0.25.0"
ipc-channel = "0.16.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
create_process_w = { version = "0.1.2", package = "CreateProcessW" }
